--- a/5_SwapICPCLP.ipynb
+++ b/5_SwapICPCLP.ipynb
@@ -36,18 +36,14 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": [],
-    "ExecuteTime": {
-     "end_time": "2025-08-25T15:09:04.535363Z",
-     "start_time": "2025-08-25T15:09:04.532844Z"
-    }
+    "tags": []
    },
    "source": [
     "import qcfinancial as qcf\n",
     "import aux_functions as aux"
    ],
    "outputs": [],
-   "execution_count": 11
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -79,17 +75,13 @@
      "iopub.status.idle": "2024-06-16T19:27:18.171839Z",
      "shell.execute_reply": "2024-06-16T19:27:18.170826Z",
      "shell.execute_reply.started": "2024-06-16T19:27:18.167788Z"
-    },
-    "ExecuteTime": {
-     "end_time": "2025-08-25T15:09:04.545708Z",
-     "start_time": "2025-08-25T15:09:04.543811Z"
     }
    },
    "source": [
     "trade_date = qcf.QCDate(14, 6, 2024)"
    ],
    "outputs": [],
-   "execution_count": 12
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -100,10 +92,6 @@
      "iopub.status.idle": "2024-06-16T19:27:18.180364Z",
      "shell.execute_reply": "2024-06-16T19:27:18.179182Z",
      "shell.execute_reply.started": "2024-06-16T19:27:18.173378Z"
-    },
-    "ExecuteTime": {
-     "end_time": "2025-08-25T15:09:04.554631Z",
-     "start_time": "2025-08-25T15:09:04.552359Z"
     }
    },
    "source": [
@@ -130,7 +118,7 @@
     "}"
    ],
    "outputs": [],
-   "execution_count": 13
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -155,10 +143,6 @@
      "iopub.status.idle": "2024-06-16T19:27:18.186341Z",
      "shell.execute_reply": "2024-06-16T19:27:18.185597Z",
      "shell.execute_reply.started": "2024-06-16T19:27:18.182136Z"
-    },
-    "ExecuteTime": {
-     "end_time": "2025-08-25T15:09:04.563849Z",
-     "start_time": "2025-08-25T15:09:04.561732Z"
     }
    },
    "source": [
@@ -167,7 +151,7 @@
     "meses = maturity.get_months() + 12 * maturity.get_years()"
    ],
    "outputs": [],
-   "execution_count": 14
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -185,10 +169,6 @@
      "iopub.status.idle": "2024-06-16T19:27:18.192833Z",
      "shell.execute_reply": "2024-06-16T19:27:18.192104Z",
      "shell.execute_reply.started": "2024-06-16T19:27:18.187714Z"
-    },
-    "ExecuteTime": {
-     "end_time": "2025-08-25T15:09:04.572455Z",
-     "start_time": "2025-08-25T15:09:04.570497Z"
     }
    },
    "source": [
@@ -203,7 +183,7 @@
     "}"
    ],
    "outputs": [],
-   "execution_count": 15
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -214,10 +194,6 @@
      "iopub.status.idle": "2024-06-16T19:27:18.199185Z",
      "shell.execute_reply": "2024-06-16T19:27:18.198507Z",
      "shell.execute_reply.started": "2024-06-16T19:27:18.195960Z"
-    },
-    "ExecuteTime": {
-     "end_time": "2025-08-25T15:09:04.579594Z",
-     "start_time": "2025-08-25T15:09:04.577954Z"
     }
    },
    "source": [
@@ -226,7 +202,7 @@
     ")"
    ],
    "outputs": [],
-   "execution_count": 16
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -244,66 +220,13 @@
      "iopub.status.idle": "2024-06-16T19:27:18.281528Z",
      "shell.execute_reply": "2024-06-16T19:27:18.280921Z",
      "shell.execute_reply.started": "2024-06-16T19:27:18.200239Z"
-    },
-    "ExecuteTime": {
-     "end_time": "2025-08-25T15:09:04.588639Z",
-     "start_time": "2025-08-25T15:09:04.584338Z"
     }
    },
    "source": [
     "aux.leg_as_dataframe(fixed_rate_leg).style.format(aux.format_dict)"
    ],
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1094a2d50>"
-      ],
-      "text/html": [
-       "<style type=\"text/css\">\n",
-       "</style>\n",
-       "<table id=\"T_d1d24\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_d1d24_level0_col0\" class=\"col_heading level0 col0\" >fecha_inicial</th>\n",
-       "      <th id=\"T_d1d24_level0_col1\" class=\"col_heading level0 col1\" >fecha_final</th>\n",
-       "      <th id=\"T_d1d24_level0_col2\" class=\"col_heading level0 col2\" >fecha_pago</th>\n",
-       "      <th id=\"T_d1d24_level0_col3\" class=\"col_heading level0 col3\" >nocional</th>\n",
-       "      <th id=\"T_d1d24_level0_col4\" class=\"col_heading level0 col4\" >amortizacion</th>\n",
-       "      <th id=\"T_d1d24_level0_col5\" class=\"col_heading level0 col5\" >interes</th>\n",
-       "      <th id=\"T_d1d24_level0_col6\" class=\"col_heading level0 col6\" >amort_es_flujo</th>\n",
-       "      <th id=\"T_d1d24_level0_col7\" class=\"col_heading level0 col7\" >flujo</th>\n",
-       "      <th id=\"T_d1d24_level0_col8\" class=\"col_heading level0 col8\" >moneda_nocional</th>\n",
-       "      <th id=\"T_d1d24_level0_col9\" class=\"col_heading level0 col9\" >valor_tasa</th>\n",
-       "      <th id=\"T_d1d24_level0_col10\" class=\"col_heading level0 col10\" >tipo_tasa</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th id=\"T_d1d24_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_d1d24_row0_col0\" class=\"data row0 col0\" >2024-06-18</td>\n",
-       "      <td id=\"T_d1d24_row0_col1\" class=\"data row0 col1\" >2025-06-18</td>\n",
-       "      <td id=\"T_d1d24_row0_col2\" class=\"data row0 col2\" >2025-06-19</td>\n",
-       "      <td id=\"T_d1d24_row0_col3\" class=\"data row0 col3\" >1,000,000,000.00</td>\n",
-       "      <td id=\"T_d1d24_row0_col4\" class=\"data row0 col4\" >1,000,000,000.00</td>\n",
-       "      <td id=\"T_d1d24_row0_col5\" class=\"data row0 col5\" >30,416,666.67</td>\n",
-       "      <td id=\"T_d1d24_row0_col6\" class=\"data row0 col6\" >False</td>\n",
-       "      <td id=\"T_d1d24_row0_col7\" class=\"data row0 col7\" >30,416,666.67</td>\n",
-       "      <td id=\"T_d1d24_row0_col8\" class=\"data row0 col8\" >CLP</td>\n",
-       "      <td id=\"T_d1d24_row0_col9\" class=\"data row0 col9\" >3.0000%</td>\n",
-       "      <td id=\"T_d1d24_row0_col10\" class=\"data row0 col10\" >LinAct360</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 17
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -328,10 +251,6 @@
      "iopub.status.idle": "2024-06-16T19:27:18.286888Z",
      "shell.execute_reply": "2024-06-16T19:27:18.286278Z",
      "shell.execute_reply.started": "2024-06-16T19:27:18.282811Z"
-    },
-    "ExecuteTime": {
-     "end_time": "2025-08-25T15:09:04.597685Z",
-     "start_time": "2025-08-25T15:09:04.595657Z"
     }
    },
    "source": [
@@ -350,7 +269,7 @@
     "}"
    ],
    "outputs": [],
-   "execution_count": 18
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -368,10 +287,6 @@
      "iopub.status.idle": "2024-06-16T19:27:18.291307Z",
      "shell.execute_reply": "2024-06-16T19:27:18.290667Z",
      "shell.execute_reply.started": "2024-06-16T19:27:18.288213Z"
-    },
-    "ExecuteTime": {
-     "end_time": "2025-08-25T15:09:04.605006Z",
-     "start_time": "2025-08-25T15:09:04.603484Z"
     }
    },
    "source": [
@@ -380,7 +295,7 @@
     ")"
    ],
    "outputs": [],
-   "execution_count": 19
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -398,80 +313,13 @@
      "iopub.status.idle": "2024-06-16T19:27:18.301895Z",
      "shell.execute_reply": "2024-06-16T19:27:18.301202Z",
      "shell.execute_reply.started": "2024-06-16T19:27:18.292240Z"
-    },
-    "ExecuteTime": {
-     "end_time": "2025-08-25T15:09:04.616259Z",
-     "start_time": "2025-08-25T15:09:04.611998Z"
     }
    },
    "source": [
     "aux.leg_as_dataframe(on_index_leg).style.format(aux.format_dict)"
    ],
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x109b60190>"
-      ],
-      "text/html": [
-       "<style type=\"text/css\">\n",
-       "</style>\n",
-       "<table id=\"T_73327\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_73327_level0_col0\" class=\"col_heading level0 col0\" >fecha_inicial</th>\n",
-       "      <th id=\"T_73327_level0_col1\" class=\"col_heading level0 col1\" >fecha_final</th>\n",
-       "      <th id=\"T_73327_level0_col2\" class=\"col_heading level0 col2\" >fecha_inicial_indice</th>\n",
-       "      <th id=\"T_73327_level0_col3\" class=\"col_heading level0 col3\" >fecha_final_indice</th>\n",
-       "      <th id=\"T_73327_level0_col4\" class=\"col_heading level0 col4\" >fecha_pago</th>\n",
-       "      <th id=\"T_73327_level0_col5\" class=\"col_heading level0 col5\" >nocional</th>\n",
-       "      <th id=\"T_73327_level0_col6\" class=\"col_heading level0 col6\" >amortizacion</th>\n",
-       "      <th id=\"T_73327_level0_col7\" class=\"col_heading level0 col7\" >amort_es_flujo</th>\n",
-       "      <th id=\"T_73327_level0_col8\" class=\"col_heading level0 col8\" >moneda_nocional</th>\n",
-       "      <th id=\"T_73327_level0_col9\" class=\"col_heading level0 col9\" >nombre_indice</th>\n",
-       "      <th id=\"T_73327_level0_col10\" class=\"col_heading level0 col10\" >valor_indice_inicial</th>\n",
-       "      <th id=\"T_73327_level0_col11\" class=\"col_heading level0 col11\" >valor_indice_final</th>\n",
-       "      <th id=\"T_73327_level0_col12\" class=\"col_heading level0 col12\" >valor_tasa</th>\n",
-       "      <th id=\"T_73327_level0_col13\" class=\"col_heading level0 col13\" >tipo_tasa</th>\n",
-       "      <th id=\"T_73327_level0_col14\" class=\"col_heading level0 col14\" >interes</th>\n",
-       "      <th id=\"T_73327_level0_col15\" class=\"col_heading level0 col15\" >flujo</th>\n",
-       "      <th id=\"T_73327_level0_col16\" class=\"col_heading level0 col16\" >spread</th>\n",
-       "      <th id=\"T_73327_level0_col17\" class=\"col_heading level0 col17\" >gearing</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th id=\"T_73327_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_73327_row0_col0\" class=\"data row0 col0\" >2024-06-18</td>\n",
-       "      <td id=\"T_73327_row0_col1\" class=\"data row0 col1\" >2025-06-18</td>\n",
-       "      <td id=\"T_73327_row0_col2\" class=\"data row0 col2\" >2024-06-18</td>\n",
-       "      <td id=\"T_73327_row0_col3\" class=\"data row0 col3\" >2025-06-18</td>\n",
-       "      <td id=\"T_73327_row0_col4\" class=\"data row0 col4\" >2025-06-19</td>\n",
-       "      <td id=\"T_73327_row0_col5\" class=\"data row0 col5\" >1,000,000,000.00</td>\n",
-       "      <td id=\"T_73327_row0_col6\" class=\"data row0 col6\" >1,000,000,000.00</td>\n",
-       "      <td id=\"T_73327_row0_col7\" class=\"data row0 col7\" >False</td>\n",
-       "      <td id=\"T_73327_row0_col8\" class=\"data row0 col8\" >CLP</td>\n",
-       "      <td id=\"T_73327_row0_col9\" class=\"data row0 col9\" >ICPCLP</td>\n",
-       "      <td id=\"T_73327_row0_col10\" class=\"data row0 col10\" >1.000000</td>\n",
-       "      <td id=\"T_73327_row0_col11\" class=\"data row0 col11\" >1.000000</td>\n",
-       "      <td id=\"T_73327_row0_col12\" class=\"data row0 col12\" >0.0000%</td>\n",
-       "      <td id=\"T_73327_row0_col13\" class=\"data row0 col13\" >LinAct360</td>\n",
-       "      <td id=\"T_73327_row0_col14\" class=\"data row0 col14\" >0.00</td>\n",
-       "      <td id=\"T_73327_row0_col15\" class=\"data row0 col15\" >0.00</td>\n",
-       "      <td id=\"T_73327_row0_col16\" class=\"data row0 col16\" >0.0000%</td>\n",
-       "      <td id=\"T_73327_row0_col17\" class=\"data row0 col17\" >1.00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 20
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
